--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
@@ -22,8 +23,19 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
-  },
+    ],
+    "paths": {
+      "@components/*": [
+          "src/components/*"
+        ],
+        "@services/*": [
+          "src/services/*"
+        ],
+        "@environments": [
+          "src/environments/environment"
+        ]
+      }
+    },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
